--- a/hotel-server/build.gradle
+++ b/hotel-server/build.gradle
@@ -19,11 +19,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-devtools'
     implementation 'mysql:mysql-connector-java'
+    implementation 'com.github.xiaoymin:swagger-bootstrap-ui:1.9.6'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
-    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
     implementation 'com.alibaba:fastjson:1.2.68'
-//    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-    // https://mvnrepository.com/artifact/org.projectlombok/lombok
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     compileOnly 'org.projectlombok:lombok:1.18.12'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
