--- a/hotel-server/build.gradle
+++ b/hotel-server/build.gradle
@@ -15,6 +15,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.auth0:java-jwt:3.10.0'
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.2.2.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.2.2.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor:2.2.2.RELEASE'
     implementation 'com.alibaba:druid-spring-boot-starter:1.1.14'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-devtools'
