--- a/hotel-front/angular.json
+++ b/hotel-front/angular.json
@@ -32,6 +32,7 @@
               }
             ],
             "styles": [
+              "src/theme.less",
               "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
               "node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
               "node_modules/@fortawesome/fontawesome-free/scss/regular.scss",
@@ -39,8 +40,7 @@
               "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
               "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
               "node_modules/animate.css/animate.css",
-              "src/styles.scss",
-              "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.scss"
+              "src/styles.scss"
             ],
             "scripts": [
               "node_modules/chart.js/dist/Chart.js",
