--- a/hotel-server/src/main/resources/application.yml
+++ b/hotel-server/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
     active: dev
   datasource:
     druid:
-      url: jdbc:mysql://localhost:3306/cmsDB?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useUnicode=true&useSSL=false&allowPublicKeyRetrieval=true
+      url: jdbc:mysql://47.107.239.108:3306/cmsDB?characterEncoding=utf-8
       username: root
-      password: Liyu8824
+      password: Cssl123.
       driver-class-name: com.mysql.cj.jdbc.Driver            # 数据库访问配置,主数据源，默认的
       initial-size: 5          # 下面为连接池的补充设置，应用到上面所有数据源中,初始化大小，最小，最大
       min-idle: 5
@@ -73,16 +73,16 @@ springfox:
 
 info:
   app:
-    name: Course scheduling system of Laboratory
-    abbrName: cssl
-    version: v0.6
+    name: cms
+    abbrName: cms
+    version: v1.0-beta
 
 api:
   base-path: /api
 
 management:
   server:
-    port: 8090
+    port: 8080
   endpoints:
     web:
       base-path: /actuator
@@ -104,4 +104,4 @@ security:
     secret: mySecret
     expiration: 12000
     issuer: suwen
-    authentication-path: /api/auth
+    authentication-path: /api/login
