--- a/hotel-server/src/main/resources/application.yml
+++ b/hotel-server/src/main/resources/application.yml
@@ -11,9 +11,11 @@ spring:
     active: dev
   datasource:
     druid:
-      url: jdbc:mysql://47.107.239.108:3306/cmsDB?characterEncoding=utf-8
+      #url: jdbc:mysql://47.107.239.108:3306/cmsDB?characterEncoding=utf-8
+      url: jdbc:mysql://localhost:3306/cmsDB?characterEncoding=utf8&amp&useSSL=false&amp&serverTimezone=UTC&amp&rewriteBatchedStatements=true
       username: root
-      password: Cssl123.
+      #password: Cssl123.
+      password: Liyu8824
       driver-class-name: com.mysql.cj.jdbc.Driver            # 数据库访问配置,主数据源，默认的
       initial-size: 5          # 下面为连接池的补充设置，应用到上面所有数据源中,初始化大小，最小，最大
       min-idle: 5
