1. 引入 Knife4j。 2. 修改readme.

--- a/hotel-server/build.gradle
+++ b/hotel-server/build.gradle
@@ -24,8 +24,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-devtools'
     implementation 'mysql:mysql-connector-java'
-    implementation 'com.github.xiaoymin:swagger-bootstrap-ui:1.9.6'
-    implementation 'io.springfox:springfox-swagger2:2.9.2'
+    //implementation 'com.github.xiaoymin:swagger-bootstrap-ui:1.9.6'
+    compile group: 'com.github.xiaoymin', name: 'knife4j-spring-boot-starter', version: '2.0.3'
+    //implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'com.alibaba:fastjson:1.2.68'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     compileOnly 'org.projectlombok:lombok:1.18.12'
