--- a/hotel-server/src/main/resources/application.yml
+++ b/hotel-server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:                  #配置server
   tomcat:       #springboot乱码解决
     uri-encoding: UTF-8
   servlet:
-    context-path: /
+    context-path: /hotel
   port: 8080
 
 
@@ -11,10 +11,8 @@ spring:
     active: prod
   datasource:
     druid:
-      #url: jdbc:mysql://localhost:3306/cmsDB?characterEncoding=utf8&amp&useSSL=false&amp&serverTimezone=UTC&amp&rewriteBatchedStatements=true
       username: root
       password: Cssl123.
-      #password: Liyu8824
       driver-class-name: com.mysql.cj.jdbc.Driver            # 数据库访问配置,主数据源，默认的
       initial-size: 5          # 下面为连接池的补充设置，应用到上面所有数据源中,初始化大小，最小，最大
       min-idle: 5
